--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>MyGamesList</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/528/528111.png ">
   </head>
   <body class ="primary_color">
     <noscript>You need to enable JavaScript to run this app.</noscript>
